--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -7,6 +7,7 @@ $contactBtnColorHover: #50e4d2;
 $activeTubeColor: #eb8a91;
 $activeBodyColor: #927e36da;
 $activeBtnColor: #f04f5c;
+$activeBtnTextColor: #f5dbdd;
 $activeCardColor: #a02933;
 $activeSocialMediaColor: #f16d78;
 $activeCardSideColor: #a02933;
