--- a/src/sass/_mixins.scss
+++ b/src/sass/_mixins.scss
@@ -27,6 +27,12 @@
  opacity: 0.6;
  color: #555;
  cursor: pointer;
+ &:hover {
+  opacity: 1;
+  color: $activeBtnTextColor;
+  font-weight: bold;
+  letter-spacing: 1px;
+ }
 }
 @mixin tubeFilter {
  filter: drop-shadow(0 -3px 2px #fd6b6b) drop-shadow(0 3px 2px #fd6b6b);
