--- a/src/sass/_projectScreen.scss
+++ b/src/sass/_projectScreen.scss
@@ -8,18 +8,14 @@
 
   position: absolute;
   top: 13vh;
-  // background: antiquewhite;
-  background: linear-gradient(332.03deg, rgb(98, 46, 46), rgb(149, 141, 141));
-  //   left: 17vw;
+
+  //   background: linear-gradient(332.03deg, rgb(98, 46, 46), rgb(149, 141, 141));
+  background: linear-gradient(332.03deg, #5d3112, #372525);
   margin-left: 11vw;
   border-radius: 7px;
-  // opacity: 0.96;
-  //   border: 2px solid $activeTubeColor;
-  // box-shadow: 0px 0px 11px #ff8888;
-  filter: drop-shadow(0 -3px 1px #c67e7e) drop-shadow(0 2px 2px #c67e7e);
+
+  filter: drop-shadow(0 3px 2px #1f2020);
   @include flexCentered;
-  // flex-wrap: wrap;
-  // overflow-y: scroll;
  }
 
  &__screenproject-card__wrapper {
@@ -89,15 +85,15 @@
 
   &__screenproject-header {
    position: sticky;
-   left: 46vw;
+   left: 16vw;
    right: 0;
    bottom: 13.4em;
    top: 0;
    flex-shrink: 0;
 
-   &.transactional {
-    left: 37vw;
-   }
+   //    &.transactional {
+   //     left: 37vw;
+   //    }
   }
   &__screenproject-card__wrapper {
    display: flex;
