--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -54,7 +54,7 @@ body {
   border-radius: 1.5em;
   border: none;
   background: $contactBtnColor;
-  color: #444444;
+  color: #d6d6d6;
   font-family: 'Reem Kufi', sans-serif;
   //   font-weight: bold;
   letter-spacing: 1px;
