--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -2,11 +2,12 @@ $borderTest: 1px solid rgb(17, 133, 26);
 $borderTest2: 1px solid rgb(17, 96, 133);
 $tubeColor: rgba(0, 0, 0, 0.116);
 $tubeColorActive: #f7858f;
-$contactBtnColor: #50c5b7;
+// $contactBtnColor: #50c5b7;
+$contactBtnColor: #219f90;
 $contactBtnColorHover: #50e4d2;
-$activeTubeColor: #eb8a91;
+$activeTubeColor: #e0656d;
 $defaultBodyColor: linear-gradient(170deg, #ffdc60 0%, #945504 100%);
-$activeBodyColor: linear-gradient(170deg, #b99412 0%, #673a00 100%);
+$activeBodyColor: linear-gradient(170deg, #c5a125 0%, #eda447 100%);
 $activeBodyColor2: linear-gradient(
  124.67deg,
  #157795 0%,
