--- a/src/sass/_activationLogic.scss
+++ b/src/sass/_activationLogic.scss
@@ -13,7 +13,7 @@
   @include activeTubeBottom;
  }
 
- .main-content__btn-container button.project-btn {
+ button.project-btn {
   @include activeBtn;
  }
  .main-content__btn-container button:nth-child(2) {
@@ -35,9 +35,9 @@
   -webkit-filter: blur(0px) brightness(2.6) contrast(4.8) grayscale(0.18)
    hue-rotate(170deg) invert(0.1) opacity(100%) saturate(4.3) sepia(0.29)
    drop-shadow(0px 1px 3px #000);
-  filter: blur(0px) brightness(2.5) contrast(5) grayscale(0) hue-rotate(190deg)
-   invert(0) opacity(100%) saturate(6) sepia(6.29)
-   drop-shadow(0px 1px 1px $activeSocialMediaColor);
+  filter: blur(0px) brightness(2.6) contrast(4.8) grayscale(0.18)
+   hue-rotate(170deg) invert(0.1) opacity(100%) saturate(4.3) sepia(0.29)
+   drop-shadow(0px 1px 3px #000);
 
   &:hover {
    -webkit-filter: blur(0px) brightness(2.7) contrast(7) grayscale(0)
@@ -145,8 +145,14 @@
   @include activeTubePromo;
  }
 
- .main-content__btn-container button.project-btn#promo {
+ button.project-btn#promo {
   @include activeBtn;
+ }
+
+ @media screen and (min-width: 800px) {
+  div.navigation-container {
+   display: none !important;
+  }
  }
 }
 
@@ -162,7 +168,7 @@
   @include activeTubeTransactional;
  }
 
- .main-content__btn-container button.project-btn#transactional {
+ button.project-btn#transactional {
   @include activeBtn;
  }
 }
@@ -180,7 +186,7 @@
   @include activeTubeNewsletter;
  }
 
- .main-content__btn-container button.project-btn#newsletter {
+ button.project-btn#newsletter {
   @include activeBtn;
  }
 }
@@ -197,7 +203,7 @@
   @include activeTubeLandingPage;
  }
 
- .main-content__btn-container button.project-btn#landingPage {
+ button.project-btn#landingPage {
   @include activeBtn;
  }
 }
@@ -302,7 +308,31 @@
 //project slider
 @media screen and (max-width: 800px) {
  .slideLeft {
-  transform: translateX(-100%);
+  transform: translateX(-150%);
+ }
+}
+
+@media screen and (max-width: 500px) {
+ .slideLeft {
+  transform: translateX(-170%);
+ }
+}
+
+@media screen and (max-width: 680px) {
+ .slideLeft {
+  transform: translateX(-160%);
+ }
+}
+
+@media screen and (max-width: 500px) {
+ .slideLeft {
+  transform: translateX(-180%);
+ }
+}
+
+@media screen and (max-width: 360px) {
+ .slideLeft {
+  transform: translateX(-190%);
  }
 }
 
