--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -16,12 +16,10 @@ $activeBodyColor2: linear-gradient(
 );
 $activeBtnColor: #f04f5c;
 $activeBtnTextColor: #f5dbdd;
-// $activeCardColor: #a02933;
 $activeCardColor: #9c1622;
 $activeSocialMediaColor: #f16d78;
-$activeCardSideColor: #a02933;
+$activeCardSideColor: #9f1e28;
 $trayNotchBGcolor__hover: #8dc59d;
 $trayNotchBGcolor: #349085;
 $liveLinkColor: rgb(248, 155, 170);
 $hoverColor: #f9b9b7;
-// $backgrounHome:;
