--- a/src/sass/_mixins.scss
+++ b/src/sass/_mixins.scss
@@ -24,15 +24,14 @@
 }
 
 @mixin projectBtnDefault {
- border-radius: 2em;
+ border-radius: 2px;
  padding: 0.6em 2em;
  border: none;
- //  background: #ff3f4f;
  background: #e03442;
  opacity: 0.3;
  color: #555;
  cursor: pointer;
-
+ @include transition-ease;
  &:hover {
   opacity: 1;
   color: $activeBtnTextColor;
@@ -107,18 +106,18 @@
 }
 
 @mixin defaultCardStyle {
- //  width: 32vw;
  width: 51em;
  height: 41vh;
  border-radius: 1em;
- //   background-color: #f04f5c;
- //  background-color: #e94150;
  background-color: #e02a3a;
  display: flex;
  flex-direction: column;
  padding: 2em 1em;
- transition: all 1s;
+ transition: all 0.6s;
  cursor: pointer;
+ &:hover {
+  background-color: #971919;
+ }
 }
 
 //active body color
@@ -131,11 +130,9 @@
 
 @mixin activeCardSideColor {
  .main-content__card-container__card div.main-content__card-sideB {
-  // background-color: $activeCardColor;
   background-color: $activeCardSideColor;
  }
  .main-content__card-container__card div.main-content__card-sideA {
-  // background-color: $activeCardColor;
   background-color: $activeCardSideColor;
  }
 }
@@ -146,14 +143,15 @@
  //  background-color: #d83340;
  opacity: 1;
  color: #e9e9e9;
- border: 2px solid #eb8a9196;
+ //  border: 2px solid #eb8a9196;
  //  filter: drop-shadow(0 0 3px #fd6b6b80);
- box-shadow: 1px 1px 9px 0px rgba(245, 145, 145, 0.66);
+ //  box-shadow: 1px 1px 2px 0px rgb(139, 9, 9);
  transition: opacity 300ms ease-in-out;
  &:hover {
   opacity: 1;
   cursor: pointer;
   font-weight: bold;
+  box-shadow: 1px 1px 2px 0px rgb(139, 9, 9);
  }
 }
 
