--- a/src/sass/_projectScreen.scss
+++ b/src/sass/_projectScreen.scss
@@ -56,10 +56,8 @@
    border: 1px solid aliceblue;
    position: absolute;
    top: 17vh;
-   background: linear-gradient(332.03deg, #622e2e, #958d8d);
    border-radius: 7px;
-   border: 2px solid #eb8a91;
-   filter: drop-shadow(0 -3px 2px #fa9898) drop-shadow(0 3px 2px #fa9898);
+   border: 1px solid #4e0e13e0;
    overflow-x: scroll;
   }
 
