--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -6,6 +6,7 @@ $tubeColorActive: #f7858f;
 $contactBtnColor: #219f90;
 $contactBtnColorHover: #50e4d2;
 $activeTubeColor: #e0656d;
+// $activeTubeColor: #9e9fa3f8;
 $defaultBodyColor: linear-gradient(170deg, #ffdc60 0%, #945504 100%);
 $activeBodyColor: linear-gradient(170deg, #c5a125 0%, #eda447 100%);
 $activeBodyColor2: linear-gradient(
