--- a/src/sass/_mixins.scss
+++ b/src/sass/_mixins.scss
@@ -42,7 +42,7 @@
  }
 }
 @mixin tubeFilter {
- filter: drop-shadow(0 -3px 2px #fd6b6b) drop-shadow(0 3px 2px #fd6b6b);
+ filter: drop-shadow(0 -3px 2px #f88585) drop-shadow(0 3px 2px #f88585);
 }
 
 //default tube style
@@ -65,9 +65,9 @@
 //activeTubes
 
 @mixin tubeTop {
- border-top: 4px solid $activeTubeColor !important;
- border-right: 4px solid $activeTubeColor !important;
- border-bottom: 4px solid $activeTubeColor !important;
+ border-top: 3px solid $activeTubeColor !important;
+ border-right: 3px solid $activeTubeColor !important;
+ border-bottom: 3px solid $activeTubeColor !important;
  @include tubeFilter();
 }
 
@@ -116,7 +116,7 @@
  transition: all 0.6s;
  cursor: pointer;
  &:hover {
-  background-color: #971919;
+  background-color: #c21b1b;
  }
 }
 
@@ -140,12 +140,8 @@
 //active button style
 
 @mixin activeBtn {
- //  background-color: #d83340;
  opacity: 1;
  color: #e9e9e9;
- //  border: 2px solid #eb8a9196;
- //  filter: drop-shadow(0 0 3px #fd6b6b80);
- //  box-shadow: 1px 1px 2px 0px rgb(139, 9, 9);
  transition: opacity 300ms ease-in-out;
  &:hover {
   opacity: 1;
@@ -166,7 +162,7 @@
  div.main-content__card-sideB {
   transform: rotateX(190deg);
   &:hover {
-   background-color: rgb(145, 15, 47);
+   background-color: rgb(114, 11, 37);
   }
  }
 }
